Key Backend changes
Minor but key changes to CollectionServiceFacade and CollectionServiceImpl to allow testing to work properly as well as changes to the backend file itself.